--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 :root {
   --dark-color: #2c3e50;
-  --light-color: #ecf0f1;
+  --dial-color: #34495e;
+  --hand-color: rgba(255, 255, 255, 0.6);
+  --translucent-color: rgba(255, 255, 255, 0.1);
 }
 
 html,
@@ -9,7 +11,7 @@ body {
 }
 
 html {
-  background-color: #2c3e50;
+  background-color: var(--dark-color);
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -19,15 +21,15 @@ html {
 .clock {
   width: 500px;
   height: 500px;
-  background-color: #34495e;
+  background-color: var(--dial-color);
   border-radius: 50%;
   position: relative;
   counter-reset: number;
 }
 
 .clock .digital-clock {
-  background-color: #2c3e50;
-  color: rgba(255, 255, 255, 0.1);
+  background-color: var(--dark-color);
+  color: var(--translucent-color);
   font-size: 25px;
   padding: 6px 12px;
   border-radius: 6px;
@@ -40,7 +42,7 @@ html {
 .clock .face-number {
   width: 6px;
   height: 12px;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: var(--translucent-color);
   border-radius: 3px;
   position: absolute;
   left: 247px;
@@ -89,7 +91,7 @@ html {
   width: 16px;
   height: 100px;
   border-radius: 8px;
-  background-color: #e74c3c;
+  background-color: var(--hand-color);
   position: absolute;
   left: 242px;
   top: 158px;
@@ -102,7 +104,7 @@ html {
   width: 10px;
   height: 150px;
   border-radius: 5px;
-  background-color: #1abc9c;
+  background-color: var(--hand-color);
   position: absolute;
   left: 245px;
   top: 105px;
@@ -115,7 +117,7 @@ html {
   width: 4px;
   height: 250px;
   border-radius: 2px;
-  background-color: #9b59b6;
+  background-color: var(--hand-color);
   position: absolute;
   left: 248px;
   top: 25px;
