--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
+
 :root {
   --dark-color: #2c3e50;
   --dial-color: #34495e;
@@ -8,6 +10,7 @@
 html,
 body {
   margin: 0;
+  font-family: "Orbitron", sans-serif;
 }
 
 html {
@@ -34,8 +37,11 @@ html {
   padding: 6px 12px;
   border-radius: 6px;
   position: absolute;
-  top: 280px;
-  left: 280px;
+  top: 360px;
+  left: 150px;
+  width: 200px;
+  text-align: center;
+  box-sizing: border-box;
   z-index: 1;
 }
 
